fix responsiveness on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .chatItem {
-    border-top-width: 5px !important;
+  border-top-width: 5px !important;
+  width: 500px;
 }
 
 .chatItem:hover {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+  .chatItem {
+    width: 100%;
+  }
 }
